Fixes audio scrubber bug on mobile

--- a/src/components/AudioPlayer/css/Controls.css
+++ b/src/components/AudioPlayer/css/Controls.css
@@ -82,6 +82,7 @@ footer {
 /** SCRUBBER **/
 #scrubber {
     width:100%;
+    height:100%;
     appearance: none;
     background: transparent;
     outline: none;
